Fix overflowing when drawing outside container

--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,10 @@ body {
   border: 1px solid black;
   display: flex;
   flex-wrap: wrap;
+  overflow: hidden;
 }
-button {
-  padding: 0.5rem 1rem;
-  font-size: 1.5rem;
+h1,
+footer {
+  text-align: center;
+  margin: 0;
 }
